# python_project_template

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .yamllint  CODE_OF_CONDUCT.md  LICENSE  README.md  codecov.yaml  environment.yml  environment_development.yml  pixi-mapping.json  pyproject.toml  setup.cfg
.github/: dependabot.yml  release.yml
.github/workflows/: auto-merge-bot-prs.yml  copilot-setup-steps.yml  pacakge.yml  package.yaml  package.yml  package_pixi.yaml  test_and_deploy copy.yaml  test_and_deploy.yaml  unittest.yaml  unittest.yml  unittest_pixi.yaml  update-lockfiles.yml
conda.recipe/: meta.yaml  meta.yml
docs/: conf.py  index.rst
notebooks/: example.ipynb
scripts/: myscripts.py
src/packagenamepy/: __init__.py  __main__.py  configuration.py  configuration_template.ini  mainwindow.py  packagename.py  version.py
src/packagenamepy/help/: help_model.py
src/packagenamepy/home/: home_model.py  home_presenter.py  home_view.py
src/packagenamepy/models/: main.py
src/packagenamepy/presenters/: main.py
src/packagenamepy/views/: main.py  mainwindow.py
tests/: test_version.py
