[project]
name = "examplepyapp"
description = "Example Python repo for neutrons"
dynamic = ["version"]
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["neutrons", "example", "python"]
readme = "README.md"
dependencies = [
  # Dependencies available from both PyPI and conda should be listed here
  "numpy",
  "QtPy",
  "PyQt5",
  "pyqtgraph",
  # Dependencies only available from PyPI should be listed here
  "bm3d-streak-removal>=0.2.0,<0.3",
  "pytest-playwright>=0.7.0,<0.8",
]

# We use this section to map conda packages to PyPI packages if they have different names
# NOTE: prefix-dev provide minimum mapping, and we should add them in explicitly whenever
#       needed.
[conda-pypi-map]
"conda-forge" = """
{
  "pyqt": "PyQt5",
}
"""

[project.urls]
homepage = "https://github.com/neutrons/python_project_template/"  # if no homepage, use repo url
repository = "https://github.com/neutrons/python_project_template/"
# documentation = add_url_to_readthedoc_here
issues = "https://github.com/neutrons/python_project_template/issues"

[build-system]
requires = [
  "setuptools>= 42",
  "wheel",
  "toml",
  "versioningit"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.1.0"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "src/packagenamepy/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*", "docs*", "notebooks*"]

[tool.setuptools.package-data]
"*" = ["*.yml","*.yaml","*.ini"]

[project.scripts]
packagename-cli = "packagenamepy.packagename:main"

[project.gui-scripts]
packagenamepy = "packagenamepy.packagename:gui"

[tool.pytest.ini_options]
addopts = "-v --cov=packagenamepy --cov-report=term-missing"
pythonpath = [
  ".", "src", "scripts"
]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]
markers = [
    "mymarker: example markers goes here"
]

# ------------------ #
# Ruff configuration #
# ------------------ #
# NOTE: We recommend to list the ruff configuration here and let pre-commit read it from here.
#       This way, the configuration is consistent across all users.
[tool.ruff]
target-version = "py311"
line-length = 120
select = ["A", "ARG","ASYNC","BLE","C90", "E", "F", "I", "N", "UP032", "W"]
exclude = ["notebooks/**", "**/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["ibeatles"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ------------------ #
# Pixi configuration #
# ------------------ #
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]  # add additional platforms as needed

[tool.pixi.pypi-dependencies]
examplepyapp = { path = ".", editable = true }

# The denpendencies listed below will be prioritized over the ones
# listed in the [project] section.
[tool.pixi.dependencies]
# This will overwrite the dependencies listed in the [project] section
numpy = "*"
scipy = "*"  # specify derivative dependencies here if you need them from conda
# GUI
pyqtgraph = "*"
qt = "*"
qtpy = "*"
pyqt = "*"

[tool.pixi.tasks]
# PyPi packaging tasks
build-pypi = { cmd = "python -m build", description = "Build the package for PyPI" }
publish-pypi = { cmd = "twine upload dist/*", description = "Publish the package to PyPI", depends-on = ["build-pypi"] }
clean-pypi = { cmd = "rm -rf dist", description = "Clean the PyPI build artifacts" }
# Conda packaging tasks
# NOTE: for build-conda to work locally, you need to set pixi to use detached-environments, i.e. pixi config set detached-environments true
#       this is because the conda build will complain about build environment in source and refuse to build.
build-conda = { cmd = "cd conda.recipe && VERSION=$(versioningit ../) conda mambabuild --channel conda-forge --output-folder . .", description = "Build the package for conda" }
verify-conda = { cmd = "conda verify conda.recipe/noarch/*.tar.bz2", description = "Verify the conda package", depends-on = ["build-conda"] }
publish-conda = { cmd = "anaconda upload conda.recipe/noarch/*/*.tar.bz2", description = "Publish the package to conda", depends-on = ["verify-conda"] }
clean-conda = { cmd = "sh -c \"find conda.recipe/* ! -name 'meta.yaml' -exec rm -rf {} +\"", description = "Clean the conda build artifacts" }
# Documentation tasks
build-docs = { cmd = "sphinx-build -b html docs docs/_build", description = "Build the documentation" }
clean-docs = { cmd = "rm -rf docs/_build", description = "Clean the documentation build artifacts" }
# Testing tasks
test = { cmd = "pytest", description = "Run the tests" }  # pytest config above takes care of the arguments
# Clean all
clean-all = { description = "Clean all build artifacts", depends-on = ["clean-pypi", "clean-conda", "clean-docs"] }

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
pytest-repeat = "*"

[tool.pixi.feature.package.dependencies]
boa = "*"
anaconda-client = ">=1.12.3,<2"  # For manual upload to anaconda
conda-build = "*"
conda-verify = "*"
python-build = "*"
twine = ">=6.1.0,<7"

[tool.pixi.feature.developer.dependencies]
pip = "*"
versioningit = "*"
pre-commit = "*"
conda-tree = "*"
ruff = "*"

[tool.pixi.feature.docs.dependencies]
sphinx = ">=8.2.1,<9"
sphinx_rtd_theme = ">=3.0.1,<4"

[tool.pixi.feature.jupyter.dependencies]
jupyterlab = "*"
ipympl = "*"
ipywidgets = "*"

[tool.pixi.environments]
default = {features = ["test", "package", "docs", "developer"], solve-group = "default"}
jupyter = {features = ["developer", "jupyter"], solve-group = "jupyter"}
