[metadata]
name = packagenamepy
version = 0.0.1
author = author
description = what this pacakge does and for
keywords = keywords keywords
long_description = file: README.md, LICENSE
license = MIT
url = add repo url here
project_urls =
    Bug Tracker = add repo issue tracker url here
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
scripts =
    scripts/myscripts.py
python_requires >= 3.8

[options.packages.find]
where = src
exclude =
    tests
    notebooks

[options.extras_require]
tests = pytest

[aliases]
test = pytest

[flake8]
ignore = E203, E266, E501, E731, W503
exclude = conda.recipe/meta.yaml
max-line-length = 120

[coverage:run]
[coverage:run]
source = src/packagenamepy
omit =
        */tests/*

[coverage:report]
fail_under = 60
exclude_lines =
  if __name__ == "__main__":
